[gd_scene load_steps=2 format=3 uid="uid://b1qn226n41fkk"]

[ext_resource type="Script" path="res://scripts/ui/shop.gd" id="1_shop"]

[node name="商店" type="Node2D"]
script = ExtResource("1_shop")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0.06, 0.07, 0.1, 1)

[node name="MainMargin" type="MarginContainer" parent="CanvasLayer/UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 42

[node name="MainVBox" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="HeaderHBox" type="HBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="TitleLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 44
text = "商店"

[node name="GoldLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 20
text = "当前摩拉：0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BodyHBox" type="HBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 22

[node name="UpgradesPanel" type="PanelContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UpgradesMargin" type="MarginContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/UpgradesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 20

[node name="UpgradesVBox" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/UpgradesPanel/UpgradesMargin"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="UpgradesScroll" type="ScrollContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/UpgradesPanel/UpgradesMargin/UpgradesVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/UpgradesPanel/UpgradesMargin/UpgradesVBox/UpgradesScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="ArtifactPackPanel" type="PanelContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ArtifactPackMargin" type="MarginContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/ArtifactPackPanel"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 20

[node name="ArtifactPackVBox" type="VBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/ArtifactPackPanel/ArtifactPackMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ArtifactTitleLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/ArtifactPackPanel/ArtifactPackMargin/ArtifactPackVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "圣遗物自选包"

[node name="ArtifactDescLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/ArtifactPackPanel/ArtifactPackMargin/ArtifactPackVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "购买后可选择一件圣遗物"
autowrap_mode = 3

[node name="ArtifactPriceLabel" type="Label" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/ArtifactPackPanel/ArtifactPackMargin/ArtifactPackVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "价格：0 摩拉"

[node name="ArtifactPackButton" type="Button" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/BodyHBox/ArtifactPackPanel/ArtifactPackMargin/ArtifactPackVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 52)
text = "购买"

[node name="FooterHBox" type="HBoxContainer" parent="CanvasLayer/UIRoot/MainMargin/MainVBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CanvasLayer/UIRoot/MainMargin/MainVBox/FooterHBox"]
layout_mode = 2
custom_minimum_size = Vector2(240, 56)
text = "返回地图"
